# bevy-clipmap

./: Cargo.toml  LICENSE  README.md
assets/: heightmap_1024x1024.ktx2  terrain.wgsl
convert/: clipmap.py  requirements.txt
examples/: basic.rs
src/: clipmap.rs  lib.rs  main.rs
