[package]
name = "bevy-clipmap"
version = "0.17.3"
edition = "2024"
license = "MIT"
description = "Render huge 3D worlds using Bevy!"
exclude = [
    "assets/color_2048x2048.png",
    "assets/heightmap_1024x1024.ktx2",
    "assets/heightmap_horizon_512x512_8.ktx2",
]

[dependencies]
bevy = "0.17.3"

[dev-dependencies]
bevy-inspector-egui = "0.35"
bevy_flycam = "0.17.0"
