[package]
name = "bevy-clipmap"
version = "1.0.3"
edition = "2024"
license = "MIT"
description = "Render huge 3D worlds using Bevy!"
repository = "https://github.com/kirillsurkov/bevy-clipmap"
exclude = ["assets/*", "screenshot.png"]

[dependencies]
bevy = "0.17.3"

[dev-dependencies]
bevy_flycam = "0.17.0"
