[package]
name = "bevy-clipmap"
version = "1.0.4"
edition = "2024"
license = "MIT"
description = "Render huge 3D worlds using Bevy!"
repository = "https://github.com/kirillsurkov/bevy-clipmap"
exclude = ["assets/*", "screenshot.png"]

[dependencies]
bevy = "0.18.0"

[dev-dependencies]
bevy = { version = "0.18.0", features = ["free_camera"] }
